--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 										<header>
 											<h3> Comparing FTIR with Chandrayaan-1 Moon Mineralogy Mapper </h3>
 										</header>
+										<p style="font-size: 18px" align="justify">   </p>
 									</article>
 								</div>
 <!-- 								<div class="col-4 col-12-mobile">
