--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
 										<header>
 											<h3>Lunar-Sample-Provenance (LSP) Program: Source Regions of Lunar Meteoritic Samples</h3>
 										</header>
-										<p style="font-size: 18px" align="justify">   </p>
+										<p style="font-size: 18px" align="justify">  This program utilizes an interdisciplinary approach of pairing orbital observations of the lunar surface with geochemical analyses of lunar samples
+										with the goal of discerning potential source regions for enigmatic samples, such as lunar meteorites. Oxide compositions and trace element abundances from Lunar Prospector - Gamma Ray Spectrometer (LP-GRS, Prettyman et al., 2006), 
+										Lunar Recconnaissance Orbiter (LRO) - Diviner (Ma et al., 2020), and Chang-e'1 IIM (Xang et al., 2019). The program also incorporates surface olivine, plagioclase, and pyroxene maps from LRO - Diviner 
+										Christiansen Features (Lucey et al., 2021). </p>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
@@ -113,7 +116,7 @@
 										<header>
 											<h3> Comparing FTIR with Chandrayaan-1 Moon Mineralogy Mapper </h3>
 										</header>
-										<p style="font-size: 18px" align="justify">   </p>
+										<p style="font-size: 18px" align="justify">  </p>
 									</article>
 								</div>
 <!-- 								<div class="col-4 col-12-mobile">
