--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<p style="font-size: 18px" align="justify">  This program utilizes an interdisciplinary approach of pairing orbital observations of the lunar surface with geochemical analyses of lunar samples
 										with the goal of discerning potential source regions for enigmatic samples such as lunar meteorites. Oxide compositions and trace element abundances derived maps from Lunar Prospector - Gamma Ray Spectrometer (LP-GRS, Prettyman et al., 2006), 
 										Lunar Recconnaissance Orbiter (LRO) - Diviner (Ma et al., 2020), and Chang-e'1 IIM (Xang et al., 2019) are incorporated into the program to be compared with compositions of lunar samples. The program also incorporates surface olivine, plagioclase, and pyroxene maps from LRO - Diviner 
-										Christiansen Features (Lucey et al., 2021) that provide estimates of source regions based on three mineral abundances. The outputs are CSV and shapefiles that can be mapped in GIS platforms. See project LSP project page below
+										Christiansen Features (Lucey et al., 2021) that provide estimates of source regions based on three mineral abundances. The outputs are CSV and shapefiles that can be mapped in GIS platforms. See LSP project page below
 										for more information.</p>
 									</article>
 								</div>
