--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/LSP-ProjectPage.jpg" alt="" /></a>
 										<header>
 											<h3><a href="researchandprojects/lsp.html" >Lunar-Sample-Provenance (LSP) Program </a> </h3>
 										</header>
