--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/howtodocus.html" class="image fit"><img src="images/howto.jpg" alt="" /></a>
+										<a href="researchandprojects/howtodocus.html" class="image fit"><img src="images/EPS-article-screenshot.jpg" alt="" /></a>
 										<header>
 											<h3><a href="researchandprojects/howtodocus.html" >How To Documents </a> </h3>
 										</header>
