--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/For_LPI_InternPackage2.jpg" alt="" /></span>
 							<h1 id="title">Alissa Madera</h1>
-							<p>Researcher | Planetary Scientist</p>
+							<p>Researcher | Student </p>
 						</div>
 
 					<!-- Nav -->
